[package]
name = "axum_intro"
version = "0.1.0"
edition = "2021"
author = "ahmad.suhae@gmail.com"

[lib]
path = "src/lib.rs"

[[bin]]
name = "axum_intro"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
reqwest = "0.11.22"
